--- a/test.ipynb
+++ b/test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "5222edba-8556-40ed-b457-5b9721bd67a1",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "3f3093ce-6e0e-4cc9-95d4-9560763a3b02",
    "metadata": {},
    "outputs": [
@@ -213,8 +213,14 @@
       "║    ├───────────────────────────────────────────┤\n",
       "║    │  ANCES│   18500.0│   18500.0│ 0           │\n",
       "║    └───────────────────────────────────────────┘\n",
-      "\n",
-      "Neand ancestry:  [0.05216165, 0.0615794]\n"
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neand ancestry:  [0.0016093, 0.01627765]\n"
      ]
     }
    ],
@@ -231,35 +237,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "9a3fe960-36b6-4449-b708-834814adfe50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[43592.0, 69138.0], [1951999.0, 2002817.0], [12311631.0, 12359436.0]]\n",
+      "[[12245558.0, 12388158.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "ND_true_tracts = [[],[]]\n",
     "for idx in range(0, n_eu): \n",
+    "    print( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[0]))\n",
     "    ND_true_tracts[0].append( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[0]) )\n",
     "    ND_true_tracts[1].append( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[3]) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "99fa83a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[43592.0, 69138.0], [1951999.0, 2002817.0], [12311631.0, 12359436.0]], [[12245558.0, 12388158.0]]], [[[18913685.0, 18922861.0], [19477885.0, 19500895.0]], [[19011467.0, 19337020.0]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ND_true_tracts)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "cdbb589b-810c-499d-8ba3-054cc1d81ec0",
    "metadata": {},
    "outputs": [],
    "source": [
     "N_ref_pop=50\n",
     "N_neanderthal=4\n",
-    "N=2\n",
+    "N=3\n",
     "with open('make.obs.sims.txt', 'w') as f:\n",
     "    f.write('#POSITIONS\\t#REF\\t#ALT\\tANCESTRAL\\t#OUTGROUP\\t#ARCHAIC\\t#OBSERVATIONS\\n')\n",
     "    for v in ts3400.variants():\n",
@@ -278,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "09310ca3-8ceb-4d2a-89d6-bd8c2829b80e",
    "metadata": {},
    "outputs": [
@@ -320,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "434eb401-e4bf-4d4f-801d-5d6d7db86aff",
    "metadata": {},
    "outputs": [],
@@ -330,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2e216879-137f-41db-b6f4-a3d728c2edab",
    "metadata": {},
    "outputs": [
@@ -338,7 +364,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Число шагов в EM -алгоритме 10\r\n"
+      "Traceback (most recent call last):\r\n",
+      "  File \"/Users/maxim/Downloads/DAIseg20/dai.seg.py\", line 153, in <module>\r\n",
+      "    for i in range(len(Tracts_HMM_mas)):\r\n",
+      "NameError: name 'Tracts_HMM_mas' is not defined\r\n"
      ]
     }
    ],
@@ -348,9 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "85aff461-71a7-4983-a519-ebfca71c0dc0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "ename": "IndexError",
@@ -359,22 +390,21 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ND_HMM_tracts\u001b[38;5;241m=\u001b[39m\u001b[43museful\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_out\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout.txt.modern.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      4\u001b[0m REAL_tracts\u001b[38;5;241m=\u001b[39m[]\n",
-      "File \u001b[0;32m~/Downloads/DAIseg2/useful.py:266\u001b[0m, in \u001b[0;36mread_out\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m    263\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    265\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 266\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i][\u001b[38;5;241m2\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    268\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    269\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
-      "File \u001b[0;32m~/Downloads/DAIseg2/useful.py:266\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    263\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    265\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 266\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[43ml\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    268\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    269\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ND_HMM_tracts\u001b[38;5;241m=\u001b[39m\u001b[43museful\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_out\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout.txt.modern.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      3\u001b[0m REAL_tracts\u001b[38;5;241m=\u001b[39m[]\n",
+      "File \u001b[0;32m~/Downloads/DAIseg20/useful.py:269\u001b[0m, in \u001b[0;36mread_out\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m    266\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    268\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 269\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i][\u001b[38;5;241m2\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    271\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
+      "File \u001b[0;32m~/Downloads/DAIseg20/useful.py:269\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    266\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    268\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 269\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[43ml\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    271\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "ND_HMM_tracts=useful.read_out('out.txt.modern.txt')\n",
-    "\n",
     "HMM_tracts=[]\n",
     "REAL_tracts=[]\n",
     "for idx in range(n_eu):\n",
     "    HMM_tracts.append([useful.tracts_eu(ND_HMM_tracts[idx], len_sequence ), ND_HMM_tracts[idx]])\n",
-    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[idx], len_sequence), ND_true_tracts[idx]])\n",
-    "\n",
+    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[0][idx], len_sequence), ND_true_tracts[idx]])\n",
+    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\n",
     "df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)"
    ]
   },
@@ -430,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
