--- a/test.ipynb
+++ b/test.ipynb
@@ -66,8 +66,8 @@
     "N_EU_growth = 1450\n",
     "T_EU_growth = 31900\n",
     "gr_rate = 0.00202\n",
-    "Portion_admix = 0.05\n",
-    "Portion_admix2 = 0.05\n",
+    "Portion_admix = 0.1\n",
+    "Portion_admix2 = 0.1\n",
     "\n",
     "len_sequence = 2e7 # DNA sequence length\n",
     "\n",
@@ -132,8 +132,8 @@
       "║    │  1379│Admixture  │derived=EU          │Moves all lineages from admixed       │\n",
       "║    │      │           │ancestral=[OOA1,    │population 'EU' to ancestral          │\n",
       "║    │      │           │NEAND]              │populations. Lineages move to 'OOA1'  │\n",
-      "║    │      │           │proportions=[0.95,  │with proba 0.95; 'NEAND' with proba   │\n",
-      "║    │      │           │0.05]               │0.05. Set 'EU' to inactive, and all   │\n",
+      "║    │      │           │proportions=[0.90,  │with proba 0.9; 'NEAND' with proba    │\n",
+      "║    │      │           │0.10]               │0.1. Set 'EU' to inactive, and all    │\n",
       "║    │      │           │                    │migration rates to and from 'EU' to   │\n",
       "║    │      │           │                    │zero.                                 │\n",
       "║    └──────────────────────────────────────────────────────────────────────────────┘\n",
@@ -155,9 +155,9 @@
       "║    ├───────────────────────────────────────────────────────────────────────────────────┤\n",
       "║    │  1897│Admixture  │derived=OOA1            │Moves all lineages from admixed        │\n",
       "║    │      │           │ancestral=[OOA, NEAND]  │population 'OOA1' to ancestral         │\n",
-      "║    │      │           │proportions=[0.95,      │populations. Lineages move to 'OOA'    │\n",
-      "║    │      │           │0.05]                   │with proba 0.95; 'NEAND' with proba    │\n",
-      "║    │      │           │                        │0.05. Set 'OOA1' to inactive, and all  │\n",
+      "║    │      │           │proportions=[0.90,      │populations. Lineages move to 'OOA'    │\n",
+      "║    │      │           │0.10]                   │with proba 0.9; 'NEAND' with proba     │\n",
+      "║    │      │           │                        │0.1. Set 'OOA1' to inactive, and all   │\n",
       "║    │      │           │                        │migration rates to and from 'OOA1' to  │\n",
       "║    │      │           │                        │zero.                                  │\n",
       "║    └───────────────────────────────────────────────────────────────────────────────────┘\n",
@@ -213,14 +213,8 @@
       "║    ├───────────────────────────────────────────┤\n",
       "║    │  ANCES│   18500.0│   18500.0│ 0           │\n",
       "║    └───────────────────────────────────────────┘\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neand ancestry:  [0.0016093, 0.01627765]\n"
+      "\n",
+      "Neand ancestry:  [0.0573561, 0.05779485]\n"
      ]
     }
    ],
@@ -237,48 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9a3fe960-36b6-4449-b708-834814adfe50",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[43592.0, 69138.0], [1951999.0, 2002817.0], [12311631.0, 12359436.0]]\n",
-      "[[12245558.0, 12388158.0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ND_true_tracts = [[],[]]\n",
     "for idx in range(0, n_eu): \n",
-    "    print( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[0]))\n",
+    "#    print( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[0]))\n",
     "    ND_true_tracts[0].append( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[0]) )\n",
     "    ND_true_tracts[1].append( sims.get_migrating_tracts_ind(ts3400, 'NEAND', idx, T[3]) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "99fa83a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[[43592.0, 69138.0], [1951999.0, 2002817.0], [12311631.0, 12359436.0]], [[12245558.0, 12388158.0]]], [[[18913685.0, 18922861.0], [19477885.0, 19500895.0]], [[19011467.0, 19337020.0]]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ND_true_tracts)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cdbb589b-810c-499d-8ba3-054cc1d81ec0",
    "metadata": {},
    "outputs": [],
@@ -297,14 +272,13 @@
     "            obs+=str(i)+' '\n",
     "\n",
     "\n",
-    "\n",
     "        f.write(str(int(v.site.position))+'\\t'+str(v.alleles[0])+'\\t'+\n",
     "                str(v.alleles[1]) + '\\t'+ str(0)+'\\t' + outgroup+'\\t'+archaic+'\\t'+str(obs)+'\\n')    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "09310ca3-8ceb-4d2a-89d6-bd8c2829b80e",
    "metadata": {},
    "outputs": [
@@ -346,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "434eb401-e4bf-4d4f-801d-5d6d7db86aff",
    "metadata": {},
    "outputs": [],
@@ -356,56 +330,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2e216879-137f-41db-b6f4-a3d728c2edab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/Users/maxim/Downloads/DAIseg20/dai.seg.py\", line 153, in <module>\r\n",
-      "    for i in range(len(Tracts_HMM_mas)):\r\n",
-      "NameError: name 'Tracts_HMM_mas' is not defined\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "! python3 dai.seg.py --obs_samples samples.txt --bed test.bed   --HMM_par par.file.txt --EM yes --EM_steps 10 --EM_samples 5 --prepared_file make.obs.sims.txt --o out.EM.txt --arch_cover arch.covering.chr1.txt --cut_off 0.9"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "85aff461-71a7-4983-a519-ebfca71c0dc0",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '[]'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ND_HMM_tracts\u001b[38;5;241m=\u001b[39m\u001b[43museful\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_out\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout.txt.modern.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      3\u001b[0m REAL_tracts\u001b[38;5;241m=\u001b[39m[]\n",
-      "File \u001b[0;32m~/Downloads/DAIseg20/useful.py:269\u001b[0m, in \u001b[0;36mread_out\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m    266\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    268\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 269\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i][\u001b[38;5;241m2\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    271\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
-      "File \u001b[0;32m~/Downloads/DAIseg20/useful.py:269\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    266\u001b[0m     l\u001b[38;5;241m=\u001b[39mf\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m    268\u001b[0m l\u001b[38;5;241m=\u001b[39m[l[i]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[0;32m--> 269\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[43ml\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l))]\n\u001b[1;32m    271\u001b[0m nd_HMM_tracts\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ND1_HMM_tracts, ND2_HMM_tracts\u001b[38;5;241m=\u001b[39m\u001b[43museful\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_out\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout.archaic.ND1.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m, useful\u001b[38;5;241m.\u001b[39mread_out(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout.archaic.ND2.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#HMM_tracts=[]\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#REAL_tracts=[]\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#for idx in range(n_eu):\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)\u001b[39;00m\n",
+      "File \u001b[0;32m~/MyPython/DAIseg2-main/useful.py:275\u001b[0m, in \u001b[0;36mread_out\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m    273\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l2)):\n\u001b[1;32m    274\u001b[0m     m2\u001b[38;5;241m=\u001b[39ml2[j1]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 275\u001b[0m     m2\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mint\u001b[39m(m2[j2]) \u001b[38;5;28;01mfor\u001b[39;00m j2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(m2))]\n\u001b[1;32m    276\u001b[0m     m1\u001b[38;5;241m.\u001b[39mappend(m2)\n\u001b[1;32m    277\u001b[0m nd_HMM_tracts\u001b[38;5;241m.\u001b[39mappend(m1)\n",
+      "File \u001b[0;32m~/MyPython/DAIseg2-main/useful.py:275\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    273\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l2)):\n\u001b[1;32m    274\u001b[0m     m2\u001b[38;5;241m=\u001b[39ml2[j1]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 275\u001b[0m     m2\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mm2\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj2\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m j2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(m2))]\n\u001b[1;32m    276\u001b[0m     m1\u001b[38;5;241m.\u001b[39mappend(m2)\n\u001b[1;32m    277\u001b[0m nd_HMM_tracts\u001b[38;5;241m.\u001b[39mappend(m1)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '[]'"
      ]
     }
    ],
    "source": [
-    "ND_HMM_tracts=useful.read_out('out.txt.modern.txt')\n",
-    "HMM_tracts=[]\n",
-    "REAL_tracts=[]\n",
-    "for idx in range(n_eu):\n",
-    "    HMM_tracts.append([useful.tracts_eu(ND_HMM_tracts[idx], len_sequence ), ND_HMM_tracts[idx]])\n",
-    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[0][idx], len_sequence), ND_true_tracts[idx]])\n",
-    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\n",
-    "df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)"
+    "\n",
+    "\n",
+    "ND1_HMM_tracts, ND2_HMM_tracts=useful.read_out('out.archaic.ND1.txt'), useful.read_out('out.archaic.ND2.txt')\n",
+    "#HMM_tracts=[]\n",
+    "#REAL_tracts=[]\n",
+    "#for idx in range(n_eu):\n",
+    "#    HMM_tracts.append([useful.tracts_eu(ND_HMM_tracts[idx], len_sequence ), ND_HMM_tracts[idx]])\n",
+    "#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[0][idx], len_sequence), ND_true_tracts[idx]])\n",
+    "#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\n",
+    "#df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)"
    ]
   },
   {
@@ -460,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
