--- a/test.ipynb
+++ b/test.ipynb
@@ -330,68 +330,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e216879-137f-41db-b6f4-a3d728c2edab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 132,
    "id": "85aff461-71a7-4983-a519-ebfca71c0dc0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '[]'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ND1_HMM_tracts, ND2_HMM_tracts\u001b[38;5;241m=\u001b[39m\u001b[43museful\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_out\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout.archaic.ND1.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m, useful\u001b[38;5;241m.\u001b[39mread_out(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout.archaic.ND2.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#HMM_tracts=[]\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#REAL_tracts=[]\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#for idx in range(n_eu):\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)\u001b[39;00m\n",
-      "File \u001b[0;32m~/MyPython/DAIseg2-main/useful.py:275\u001b[0m, in \u001b[0;36mread_out\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m    273\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l2)):\n\u001b[1;32m    274\u001b[0m     m2\u001b[38;5;241m=\u001b[39ml2[j1]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 275\u001b[0m     m2\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mint\u001b[39m(m2[j2]) \u001b[38;5;28;01mfor\u001b[39;00m j2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(m2))]\n\u001b[1;32m    276\u001b[0m     m1\u001b[38;5;241m.\u001b[39mappend(m2)\n\u001b[1;32m    277\u001b[0m nd_HMM_tracts\u001b[38;5;241m.\u001b[39mappend(m1)\n",
-      "File \u001b[0;32m~/MyPython/DAIseg2-main/useful.py:275\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    273\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l2)):\n\u001b[1;32m    274\u001b[0m     m2\u001b[38;5;241m=\u001b[39ml2[j1]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 275\u001b[0m     m2\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mm2\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj2\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m j2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(m2))]\n\u001b[1;32m    276\u001b[0m     m1\u001b[38;5;241m.\u001b[39mappend(m2)\n\u001b[1;32m    277\u001b[0m nd_HMM_tracts\u001b[38;5;241m.\u001b[39mappend(m1)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '[]'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n",
+      "!!!!!!!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/scglab/MyPython/DAIseg2-main/useful.py:252: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  dd['precision'] = round(conf_matrix[i,i]/sum(conf_matrix[i,:]),7)\n",
+      "/home/scglab/MyPython/DAIseg2-main/useful.py:252: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  dd['precision'] = round(conf_matrix[i,i]/sum(conf_matrix[i,:]),7)\n"
      ]
     }
    ],
    "source": [
+    "reload(useful)\n",
+    "HMM_tracts, REAL_tracts=[], []\n",
+    "HMM_ND1, HMM_ND2=useful.read_out('out.archaic.ND1.txt'), useful.read_out('out.archaic.ND2.txt')\n",
+    "for j in range(len(HMM_ND1)):\n",
+    "\n",
+    "    nd_hmm=HMM_ND1[j]+HMM_ND2[j]\n",
+    "    if [] in nd_hmm:\n",
+    "        nd_hmm.remove([])\n",
+    "    modern_hmm=useful.tracts_eu(nd_hmm, len_sequence)\n",
+    "    HMM_tracts.append([modern_hmm, HMM_ND1[j], HMM_ND2[j]])\n",
+    "    \n",
+    "    \n",
+    "    nd_real=ND_true_tracts[0][j]+ND_true_tracts[1][j]    \n",
+    "    if [] in nd_real:\n",
+    "        nd_real.remove([])\n",
+    "        \n",
+    "    modern_real=useful.tracts_eu(nd_real, len_sequence)\n",
+    "    REAL_tracts.append([modern_real, ND_true_tracts[0][j], ND_true_tracts[1][j]])    \n",
     "\n",
     "\n",
-    "ND1_HMM_tracts, ND2_HMM_tracts=useful.read_out('out.archaic.ND1.txt'), useful.read_out('out.archaic.ND2.txt')\n",
-    "#HMM_tracts=[]\n",
-    "#REAL_tracts=[]\n",
-    "#for idx in range(n_eu):\n",
-    "#    HMM_tracts.append([useful.tracts_eu(ND_HMM_tracts[idx], len_sequence ), ND_HMM_tracts[idx]])\n",
-    "#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[0][idx], len_sequence), ND_true_tracts[idx]])\n",
-    "#    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[1][idx], len_sequence), ND_true_tracts[idx]])\n",
-    "#df=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)"
+    "\n",
+    "useful.confusion_mtrx(REAL_tracts[0], HMM_tracts[0])   \n",
+    "df = useful.df_result(  REAL_tracts, HMM_tracts,N_neanderthal, L, N_ref_pop, n_eu, N)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e95090f1-553c-49a6-bdab-aa3b3b074fe6",
+   "execution_count": 133,
+   "id": "f8d2759c-dfaa-4337-ba6c-c0fb1865a20d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>n_eu</th>\n",
+       "      <th>n_neand</th>\n",
+       "      <th>L</th>\n",
+       "      <th>n_ref_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.998474</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.919266</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.249725</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.987973</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.998756</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.925538</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.271121</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.998521</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    State     Value      Score  n_eu  n_neand     L  n_ref_pop\n",
+       "0       0  0.998474  precision     0        4  1000         50\n",
+       "1       0  0.919266     recall     0        4  1000         50\n",
+       "2       1       NaN  precision     0        4  1000         50\n",
+       "3       1  0.000000     recall     0        4  1000         50\n",
+       "4       2  0.249725  precision     0        4  1000         50\n",
+       "5       2  0.987973     recall     0        4  1000         50\n",
+       "6       0  0.998756  precision     1        4  1000         50\n",
+       "7       0  0.925538     recall     1        4  1000         50\n",
+       "8       1       NaN  precision     1        4  1000         50\n",
+       "9       1  0.000000     recall     1        4  1000         50\n",
+       "10      2  0.271121  precision     1        4  1000         50\n",
+       "11      2  0.998521     recall     1        4  1000         50"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "ND_HMM_tracts=useful.read_out('out.txt.modern.txt')\n",
-    "\n",
-    "HMM_tracts=[]\n",
-    "REAL_tracts=[]\n",
-    "for idx in range(n_eu):\n",
-    "    HMM_tracts.append([useful.tracts_eu(ND_HMM_tracts[idx], len_sequence ), ND_HMM_tracts[idx]])\n",
-    "    REAL_tracts.append([ useful.tracts_eu(ND_true_tracts[idx], len_sequence), ND_true_tracts[idx]])\n",
-    "\n",
-    "df2=useful.df_result(REAL_tracts, HMM_tracts, N_neanderthal, L, N_ref_pop, n_eu, N)"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27345b7-3b2a-449d-9993-7c5d567de707",
+   "id": "8964969b-6a79-4fa9-aa6e-e317dbd9a735",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -399,7 +583,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2caf23d6-5a5d-4dff-9490-aa9b777a7832",
+   "id": "cec0c9fc-fc40-4c63-8d6e-b841587ba930",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e7173ee-3337-415b-952d-f290f537a4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36379b24-d87d-4c2d-87fc-df7bc9ec7256",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8defcb8c-17a6-49de-9beb-393f2d476543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56d488d-caa5-45d8-a5be-fd2143a3613f",
    "metadata": {},
    "outputs": [],
    "source": []
